TEST_PROGRAMS/VALID/03/expressions.go
// expressions
/* -------------------- */
//binary_op   "||" | "&&" |
//rel_op      "==" | "!=" | "<" | "<=" | ">" | ">="
//add_op      "+" | "-" | "|" | "^" | "+=" | "-="
//mul_op      "*" | "/" | "%" | "*=" | "/=" | "%="

//bit_op       "<<" | ">>" | "&" | "&^" | "^" |
//             "<<="| ">>="| "&="| "&^="| "^="

//unary_op    "+" | "-" | "!" | "^" | "<-" | "++" | "--"
package main

func f() {
	x = x << 1
	x <<= 1

	x++
	x--

	//Unary
	//+-!ˆ
	x = +10
	x = -10
	x = !true
	x = ^0
}
