TEST_PROGRAMS/INVALID/09/unary_ops.go
// Disallowed unary operators
package unary_ops

func main() {
    <- a
    & a
    * a
}
